# trial_linear_algrbra

./: CMakeLists.txt  README.md  calculate.cpp  trial.cpp
include/: matrix.h  poly.h
